--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://us-cdbr-east.cleardb.com/heroku_05f2137213f50df?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=b9a4faf7f3aaf0
-spring.datasource.password=819fd1af
+spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com/heroku_8ac129b0b9775d4?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=b9bc51b119cd4d
+spring.datasource.password=7f1e52d4
 server.port=8081
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jackson.serialization.write-dates-as-timestamps:false
