--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com/heroku_8ac129b0b9775d4?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=b9bc51b119cd4d
-spring.datasource.password=7f1e52d4
+spring.datasource.url=jdbc:mysql://localhost:3306/laboratoriodb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=
 server.port=8081
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jackson.serialization.write-dates-as-timestamps:false
